--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "rust-project-template"
+name = "$CRATENAME"
 version = "0.1.0"
-authors = ["Carsten Kragelund <carsten@kragelund.dev>"]
+authors = ["$AUTHOR <$EMAIL>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
