--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "$CRATENAME"
+name = "CRATENAME"
 version = "0.1.0"
-authors = ["$AUTHOR <$EMAIL>"]
+authors = ["AUTHOR <EMAIL>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
