Fix formatting CI job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,20 @@ jobs:
         toolchain: nightly
         profile: minimal
         components: rustfmt
+    - name: Cache
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          target
+        key: format-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
+    - name: Rust Format
+      uses: actions-rs/cargo@v1
+      with:
+        command: fmt
+        toolchain: nightly
+        args: -- --check
 
   lint:
     runs-on: ubuntu-latest
@@ -58,11 +72,6 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         args: --all-features
-    - name: Rust Format
-      uses: actions-rs/cargo@v1
-      with:
-        command: fmt
-        args: -- --check
 
   test:
     runs-on: ubuntu-latest
